--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 		</div>
 	</div>
 
+	<div class="content">
+		<h2>People 2</h2>
+		<div class="data js-data" data-api-endpoint="people">
+			<div class="loading js-loading">
+				<svg class="loading__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+					<circle cx="50" cy="50" fill="none" ng-attr-stroke="{{config.color}}" ng-attr-stroke-width="{{config.width}}" ng-attr-r="{{config.radius}}" ng-attr-stroke-dasharray="{{config.dasharray}}" stroke="#575757" stroke-width="10" r="35" stroke-dasharray="164.93361431346415 56.97787143782138" transform="rotate(90 50 50)">
+						<animateTransform attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50" keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite"></animateTransform>
+					</circle>
+				</svg>
+				<p class="loading__text">Loading</p>
+			</div>
+		</div>
+	</div>
+
 	<script src="main.js"></script>
 	</body>
 </html>
